Big integers support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ volumes:
 
 services:
     slim:
-        image: php:8.3-alpine
+        build:
+            dockerfile: ./.docker/Dockerfile
+            context: ./
         working_dir: /var/www
         command: php -S 0.0.0.0:8080 -t public
         environment:
