--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
     "require": {
         "php": "^8.3",
         "ext-json": "*",
+        "ext-gmp": "*",
         "monolog/monolog": "^2.8",
         "php-di/php-di": "^6.4",
+        "phpmath/biginteger": "^1.0",
         "slim/psr7": "^1.5",
         "slim/slim": "^4.10",
         "symfony/cache": "^7.0"
